--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Alarko Enerji" />
+        <meta property="og:title" content="Alarko Enerji - Yenilenebilir Enerji Yatırımı" />
+        <meta property="og:description" content="Güneş ve yenilenebilir enerji projelerine yatırım yapın." />
+        <meta property="og:image" content="https://www.alarkoenerji.org/preview.png" />
+        <meta property="og:url" content="https://www.alarkoenerji.org/" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet" />
